--- a/config/database.yml
+++ b/config/database.yml
@@ -38,5 +38,5 @@ production:
   database: itrade_production
   pool: 5
   username: root
-  password:
-  socket: /var/run/mysqld/mysqld.sock
+  password: bitnami
+  socket: /opt/bitnami/mysql/tmp/mysql.sock
