--- a/itrade.yml
+++ b/itrade.yml
@@ -11,4 +11,4 @@ environment: production
 max_persistent_conns: 512
 servers: 3
 daemonize: true
-chdir: /home/yuki/Projects/itrade
+chdir: /home/bitnami/itrade
